- Reformatted New Analysis window and added links to "Add/Edit..." organisms and genome builds
- Added privacyExpirationDate to Analysis and Request tables. Field is edited via visibility tab.
- Added dictionary properties dataset_privacy_expiration and dataset_privacy_expiration_warning to govern use of privacyExpiration date field.

5.2.9
----------------------
- Added session timeout warning dialog
- Fixed billing account dropdown bug on Submit Request window.  When another lab was selected, billing account dropdown did not refresh properly.

5.2.8.1
----------------------
- Remove hardcoded reference to mysql jar in batch scripts
- Added new usage pie charts for experiments by type, analysis by type, seq applications 

5.2.8 
----------------------
- Treat login with 'guest' user account as a guest login, just like URL with parameter isGuest=Y
- Fixed logic for Experiment downloads and Experiment progress to work with now 'All experiments' filter.
- Fixed logic for Experiment downloads and Experiment progress to work for users not assigned to a lab.
- Show disk usage by lab, year, and category on Usage charts.

- Added hint to Experiment/Analysis Visibility tabs to tell how to activate Institution dropdown.
- Changed billing request lookup to find requests without needing to use "R" in the request number.
- Set lookup button as default when enter pressed in billing request lookup.
- Fixed bug where new price category causes corrupted tree.
- Use analysis_read_directory property (not analysis_write_directory) to read analysis files on file system in GetAnalysis
- Introduce ExperimentFile object to track disk usage. (Also added fileSize to AnalysisFile.)
- Added batch job RegisterFiles to track experiment data files and refresh analysis data file sizes. 

5.2.7 (Aug 29, 2011)
----------------------
- Changes to insure billing statement doesn't get sent again if a change is inadvertently made to an item on an invoice that has already been approved and sent.