@@ -5,6 +5,7 @@
 - Reformatted New Analysis window and added links to "Add/Edit..." organisms and genome builds
 - Added privacyExpirationDate to Analysis and Request tables. Field is edited via visibility tab.
 - Added dictionary properties dataset_privacy_expiration and dataset_privacy_expiration_warning to govern use of privacyExpiration date field.
+- Added request owner first name and last name to Lucene search index
 
 5.2.9
 ----------------------
